# cpp-lib-template-header-only

./: .gitignore  CMakeLists.txt  README.md  fetchcontent-lockfile.json
.github/workflows/: ci_tests.yml
cmake/: mb.cpp-lib-template-header-only-config.cmake.in
examples/: CMakeLists.txt  usage.cpp
include/mb/cpp-lib-template-header-only/: CMakeLists.txt  cpp-lib-template.hpp
src/: CMakeLists.txt  cpp-lib-template-header-only.test.cpp
